--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/swift,macos,xcode,appcode,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=swift,macos,xcode,appcode,visualstudiocode
 
+## User Settings
+.DS_Store
+
 ### AppCode ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
